--- a/lab_1/pom.xml
+++ b/lab_1/pom.xml
@@ -101,6 +101,10 @@
 			<artifactId>jts-core</artifactId>
 			<version>1.19.0</version>
 		</dependency>
+		<dependency> 
+            <groupId>org.springframework.boot</groupId> 
+            <artifactId>spring-boot-starter-data-mongodb</artifactId> 
+        </dependency> 
 
 	</dependencies>
 
