--- a/lab_1/src/main/resources/application.properties
+++ b/lab_1/src/main/resources/application.properties
@@ -1,10 +1,8 @@
 spring.application.name=lab_1
-spring.datasource.url=jdbc:postgresql://localhost:5432/tbd_lab_1
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=tbd_lab_3
 #spring.datasource.password=123
-logging.level.root=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
+
 
 #server.port: 8081
