arreglado repartidor y creacion de ordenes, funcionamiento en frontend, se deben ver las funcionalidades pedidas

--- a/lab_1/src/main/resources/application.properties
+++ b/lab_1/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=tbd_lab_3
 #spring.datasource.password=123
-
-
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+logging.level.org.springframework.data.mongodb.repository.query=DEBUG
+logging.level.org.mongodb.driver=DEBUG
 #server.port: 8081
